tests/bad/undefined-func.ris
void main():
    let int a = 4;
    let int b = 2;
    add(a,b);
    return;